# valuation-agent

./: .env.example  .gitignore  CLAUDE.md  Epicenter Valuation Dashboard_020426 (1).html  Simple Regression Analysis_Dashboard Data_v2.xlsx  docker-compose.yml  railway.toml  valuation_agent.ipynb
backend/: Dockerfile  indices.json  requirements.txt  run_batches.py  run_index_batches.py  test_bds_spot.py  test_bloomberg.py  tickers.json
backend/app/: config.py  db.py  main.py  models.py
backend/app/routes/: bloomberg.py  dashboard.py  descriptions.py  indices.py  peer_valuation.py  template.py  upload.py  (+1 more)
backend/tests/: test_dashboard_cache.py  test_forward_targets.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/scripts/: compare-regressions.ts
research/: .gitignore  __main__.py  cli.py  prepare.py  program.md  pyproject.toml  results.tsv  train.py
research/agent/: context_builder.py  llm_client.py  orchestrator.py  prompts.py
research/codegen/: pr_formatter.py  python_generator.py  typescript_generator.py
research/config/: factors.py  settings.py
research/data/: factor_store.py  fmp_client.py  fmp_factors.py  snapshot_loader.py  snapshot_uploader.py
research/evaluation/: harness.py  interpretability.py  leaderboard.py  metrics.py
research/experiments/: registry.py  runner.py  sandbox.py
research/tests/: test_codegen.py  test_harness.py  test_prepare.py  test_registry.py  test_runner.py  test_sandbox.py
scripts/: bloomberg_update.py  daily_update.bat  daily_update.py  fetch_isins.py  fix_eps_growth.py  valuation_report.py
(+49 files in other folders)
